replace absolute paths

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,10 +19,10 @@
     <meta name="twitter:description" content="Check how you're doing in hacktoberfest">
     <meta name="twitter:image" content="{{ hostname }}/img/og.png">
     <meta name="theme-color" content="#202a6b">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <title>Hacktoberfest Checker</title>
-    <link rel="stylesheet" href="/vendor/tachyons/css/tachyons.min.css"/>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="vendor/tachyons/css/tachyons.min.css"/>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="h-100 min-vh-100 overflow-y-auto flex flex-column">
     {{> github_corner}}
@@ -46,8 +46,8 @@
 
     {{> footer}}
 
-    <script src="/vendor/zepto/dist/zepto.min.js"></script>
-    <script src="/js/main-compiled.js"></script>
+    <script src="vendor/zepto/dist/zepto.min.js"></script>
+    <script src="js/main-compiled.js"></script>
 
     <!-- Google Analytics -->
     <script>
