--- a/views/me.hbs
+++ b/views/me.hbs
@@ -1,2 +1,2 @@
-<script src="/vendor/zepto/dist/zepto.min.js"></script>
-<script src="/js/main.js"></script>
+<script src="vendor/zepto/dist/zepto.min.js"></script>
+<script src="js/main.js"></script>
